# leginabroad

./: .gitignore  Procfile  RESTART_REASDME.MD  deployment_notes.md  django_notes.md  instructions.md  manage.py  pyproject.toml  requirements.txt  restart.sh  ruff.toml
.github/workflows/: main.yml
LEGINabroad/: settings.py  urls.py  wsgi.py
css/: search.css  sections.css
en_legin_abroad/: admin.py  apps.py  models.py  urls.py  views.py
en_legin_abroad/static/css/: article_style.css  media.css  nav.css  pagination.css  search.css  sections.css  side_bar_style.css  style.css
en_legin_abroad/static/static/ckeditor/: ckeditor.css
en_legin_abroad/templates/: 404.html  500.html
en_legin_abroad/templates/en_legin_abroad/: en_about.html  en_article.html  en_base.html  en_form.html  en_index.html  en_js.html  en_navbar.html  en_pagination.html  en_search.html  en_section.html  en_sections.html  en_side_bar.html
en_legin_abroad/tests/: test_models.py  test_views.py
en_legin_abroad/tests/integration_tests/: test_models.py
legin_abroad/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
legin_abroad/static/css/: admin.css  media.css  side_bar_style.css
legin_abroad/templates/legin_abroad/: _navbar.html  _pagination.html  _side_bar.html  about.html  article.html  base.html  form.html  index.html  search.html  section.html  sections.html
legin_abroad_base/: asgi.py  env_handler.py  settings.py  settings_prod.py  urls.py  wsgi.py
static/css/: article_style.css  media.css  nav.css  search.css
templates/admin/: base_site.html
(+7 files in other folders)
